--- a/index.html
+++ b/index.html
@@ -13,22 +13,27 @@
 <body>
 
     <!-- Header  -->
-    <nav>
-        <div class="col nav-logo"></div>
-        <div class="col nav-center-menu"></div>
-        <div class="col nav-right-menu"></div>
-    </nav>
+    <header>
+        <nav>
+            <div class="col nav-logo"></div>
+            <div class="col nav-center-menu"></div>
+            <div class="col nav-right-menu"></div>
+        </nav>
+    </header>
     <!-- /Header  -->
 
     <!-- Main -->
     <main>
         
         <!-- Jumbotron banner -->
-        <section>
-            <div class="container">
-                
+        <section class="jumbotron">
+            <div class="container vertical-padding">
+                <h1 class="jumbo-title"></h1>
             </div>
-
+            <div class="container">
+                <div class="col text-col"></div>
+                <div class="col image-col"></div>
+            </div>
         </section>
         <!-- /Jumbotron banner -->
 
