mezzo layout aggiunto

--- a/index.html
+++ b/index.html
@@ -32,10 +32,47 @@
             </div>
             <div class="container">
                 <div class="col text-col"></div>
-                <div class="col image-col"></div>
+                <div class="col image-col">
+                    <img src="" alt="">
+                </div>
             </div>
         </section>
         <!-- /Jumbotron banner -->
+
+        <!-- Sezione piano Dropbox -->
+        <section class="dropbox-plan">
+            <div class="container plan-top mt-2">
+                <h2 class="plan-title"></h2>
+                <input type="radio" class="mt-2">
+                <input type="radio" class="mt-2">
+
+            </div>
+            <div class="container plan-bottom mt-2">
+                <div class="col side-plan-col"></div>
+                <div class="col side-plan-col"></div>
+                <div class="col side-plan-col"></div>
+            </div>
+
+        </section>
+        <!-- /Sezione piano Dropbox -->
+
+        <!-- Sezione Enterprise + image -->
+        <section class="enterprise">
+            <div class="container enterprise-top">
+                <h3>Team</h3>
+                <h2>Enterprise</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus voluptatibus magnam error nulla quidem laborum doloribus tempora repellat cupiditate id esse velit quas molestiae, eius cumque amet minus hic voluptas.</p>
+
+            </div>
+            <div class="container enterprise-bottom mt-2">
+                <div class="col enterprise-image">
+                    <img src="" alt="">
+                </div>
+                <div class="col enterprise-text"></div>
+            </div>
+        </section>
+        <!-- /Sezione Enterprise + image -->
+
 
     </main>
     <!-- /Main -->
