--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <!-- /Sezione piano Dropbox -->
 
         <!-- Sezione Enterprise + image -->
-        <section class="enterprise">
+        <section class="enterprise clearfix">
             <div class="container enterprise-top">
                 <h3>Team</h3>
                 <h2>Enterprise</h2>
@@ -72,6 +72,22 @@
             </div>
         </section>
         <!-- /Sezione Enterprise + image -->
+
+        <!-- Sezione a 6 riquadri -->
+        <section>
+            <div class="container content-square mt-2">
+                <h1></h1>
+                <div class="col side-square"></div>
+                <div class="col side-square"></div>
+                <div class="col side-square"></div>
+            </div>
+            <div class="container side-squareer">
+                <div class="col side-square"></div>
+                <div class="col side-square"></div>
+                <div class="col side-square"></div>
+            </div>
+        </section>
+        <!-- /Sezione a 6 riquadri -->
 
 
     </main>
