--- a/index.html
+++ b/index.html
@@ -15,9 +15,25 @@
     <!-- Header  -->
     <header>
         <nav>
-            <div class="col nav-logo"></div>
-            <div class="col nav-center-menu"></div>
-            <div class="col nav-right-menu"></div>
+            <div class="col nav-logo">
+                <img src="img/logo-small.png" alt="">
+            </div>
+            <div class="col nav-center-menu">
+                <ul>
+                    <li><a href="">Perché Dropbox?</a></li>
+                    <li><a href="">Funzioni</a></li>
+                    <li><a href="">Piani e prezzi</a></li>
+                </ul>
+            </div>
+            <div class="col nav-right-menu">
+                <ul>
+                    <li><a href="">Supporto</a></li>
+                    <li><a href="">Contatta l'ufficio vendite</a></li>
+                    <li><a href="">Accedi</a></li>
+                    <li><a href="" class="blue-btn">Inizia</a></li>
+                    
+                </ul>
+            </div>
         </nav>
     </header>
     <!-- /Header  -->
@@ -88,6 +104,15 @@
             </div>
         </section>
         <!-- /Sezione a 6 riquadri -->
+
+        <!-- Sezione Designit -->
+        <section>
+            <div class="container">
+                <!-- qua ce metto l'h1 e sotto l'a href -->
+            </div>
+        </section>
+        <!-- /Sezione Designit -->
+
 
 
     </main>
