--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 
     <!-- Header  -->
     <header>
-        <nav>
+        <nav class="clearfix">
             <div class="col nav-logo">
                 <img src="img/logo-small.png" alt="">
             </div>
@@ -42,14 +43,21 @@
     <main>
         
         <!-- Jumbotron banner -->
-        <section class="jumbotron">
-            <div class="container vertical-padding">
-                <h1 class="jumbo-title"></h1>
-            </div>
+        <section class="jumbotron vertical-padding">
             <div class="container">
-                <div class="col text-col"></div>
+                <h1 class="jumbo-title">Tutto ciò che ti serve per il lavoro,<br> in un unico posto</h1>
+            </div>
+            <div class="container clearfix">
+                <div class="col text-col">
+                    <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
+                    <div class="jumbo-btn"><a href="" class="blue-btn">Inizia la tua prova gratuita</a></div>
+                    <div><a href="" id="jumbo2">Annulla in qualsiasi momento</a></div>
+                    <div id="arrow">
+                        <i class="fas fa-arrow-down"></i>
+                    </div>
+                </div>
                 <div class="col image-col">
-                    <img src="" alt="">
+                    <img src="img/jumbo.png" alt="">
                 </div>
             </div>
         </section>
