aggiornato main con sezione colonne e senzione enterprise

--- a/index.html
+++ b/index.html
@@ -64,17 +64,109 @@
         <!-- /Jumbotron banner -->
 
         <!-- Sezione piano Dropbox -->
-        <section class="dropbox-plan">
-            <div class="container plan-top mt-2">
-                <h2 class="plan-title"></h2>
-                <input type="radio" class="mt-2">
-                <input type="radio" class="mt-2">
-
+        <section class="dropbox-plan mt-2">
+            <div class="container plan-top">
+                <h2 class="plan-title">Trova il piano Dropbox Business che fa per te</h2>
+                <div class="radio1 mt-2">
+                    <input type="radio">
+                    <label for="">Fatturazione mensile</label>
+                </div>
+                <div class="radio2 mt-2">
+                    <input type="radio">
+                    <label for="">Fatturazione annuale</label>
+                </div>
             </div>
-            <div class="container plan-bottom mt-2">
-                <div class="col side-plan-col"></div>
-                <div class="col side-plan-col"></div>
-                <div class="col side-plan-col"></div>
+            <div class="container plan-bottom">
+                <div class="col side-plan-col">
+                    <div class="icon-header">
+                        <i class="fa fa-user"></i> Singolo
+                    </div>
+                    <div class="main-colon mt-2">
+                        <h2>Professional</h2>
+                        <div>19,99 €<br>/mese</div>
+                        <ul>
+                            <li>
+                                <i class="fa fa-user mt-2"></i> 1 utente
+                            </li>   
+                            <li>
+                                <i class="fa fa-folder"></i> 3 TB di spazio di archiviazione sicuro
+                            </li>
+                            <li>
+                                <i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e <span id="a-capo">condivisione file semplice e sicura</span>
+                            </li>
+                        </ul>
+                        <div><a href="" class="blue-btn">Prova gratis per 30 giorni</a></div>
+                        <span class="acquista-ora">oppure</span><span class="acquista-ora2"><a href=""> acquista ora</a></span>
+                        <h3 class="col-list">Punti salienti del piano</h3>
+                        <ul>
+                            <li>&check; Invia file fino a 100 GB con Dropbox <span id="a-capo">Transfert</span></li>
+                            <li>&check; Cartelle offline su dispositivi mobili</li>
+                            <li>&check; Pulizia remota dell'account</li>
+                            <li>&check; Filigrana documento</li>
+                            <li>&check; Assistenza prioritaria via mail e chat</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col side-plan-col center-col">
+                    <div class="icon-header">
+                        <i class="fas fa-building"></i> Team
+                    </div>
+                    <div class="main-colon mt-2">
+                        <h2>Standard</h2>
+                        <div>19,99 €<br>/ utente / mese, a partire da 3 utenti</div>
+                        <ul>
+                            <li>
+                                <i class="fa fa-user-plus mt-2"></i> 1 utente
+                            </li>   
+                            <li>
+                                <i class="fa fa-folder"></i> 3 TB di spazio di archiviazione sicuro
+                            </li>
+                            <li>
+                                <i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e <span id="a-capo">condivisione file semplice e sicura</span>
+                            </li>
+                        </ul>
+                        <div><a href="" class="blue-btn">Prova gratis per 30 giorni</a></div>
+                        <span class="acquista-ora">oppure</span><span class="acquista-ora2"><a href=""> acquista ora</a></span>
+                        <h3 class="col-list">Punti salienti del piano</h3>
+                        <ul>
+                            <li>&check; Invia file fino a 100 GB con Dropbox <span id="a-capo">Transfert</span></li>
+                            <li>&check; Cartelle offline su dispositivi mobili</li>
+                            <li>&check; Pulizia remota dell'account</li>
+                            <li>&check; Filigrana documento</li>
+                            <li>&check; Assistenza prioritaria via mail e chat</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col side-plan-col">
+                    <div class="icon-header">
+                        <i class="fas fa-building"></i> Team
+                    </div>
+                    <div class="main-colon mt-2">
+                        <h2>Advanced</h2>
+                        <div>19,99 €<br>/ utente / mese, a partire da 3 utenti</div>
+                        <ul>
+                            <li>
+                                <i class="fa fa-user-plus mt-2"></i> 1 utente
+                            </li>   
+                            <li>
+                                <i class="fa fa-folder"></i> 3 TB di spazio di archiviazione sicuro
+                            </li>
+                            <li>
+                                <i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e <span id="a-capo">condivisione file semplice e sicura</span>
+                            </li>
+                        </ul>
+                        <div><a href="" class="blue-btn">Prova gratis per 30 giorni</a></div>
+                        <span class="acquista-ora">oppure</span><span class="acquista-ora2"><a href=""> acquista ora</a></span>
+                        <h3 class="col-list">Punti salienti del piano</h3>
+                        <ul>
+                            <li>&check; Invia file fino a 100 GB con Dropbox <span id="a-capo">Transfert</span></li>
+                            <li>&check; Cartelle offline su dispositivi mobili</li>
+                            <li>&check; Pulizia remota dell'account</li>
+                            <li>&check; Filigrana documento</li>
+                            <li>&check; Assistenza prioritaria via mail e chat</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
 
         </section>
@@ -83,16 +175,28 @@
         <!-- Sezione Enterprise + image -->
         <section class="enterprise clearfix">
             <div class="container enterprise-top">
-                <h3>Team</h3>
+                <div class="icon-header">
+                    <i class="fas fa-building"></i> Team
+                </div>
                 <h2>Enterprise</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus voluptatibus magnam error nulla quidem laborum doloribus tempora repellat cupiditate id esse velit quas molestiae, eius cumque amet minus hic voluptas.</p>
+                <div>
+                    <span class="blue-btn">Contatta l'ufficio vendite</span>
+                </div>
+                <div class="enterprise-p line-height2">
+                    <p>Contatta l'ufficio vendite per i prezzi</p>
+                    <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</p>
+                </div>
 
             </div>
             <div class="container enterprise-bottom mt-2">
                 <div class="col enterprise-image">
-                    <img src="" alt="">
+                    <img src="img/partner.png" alt="partner">
                 </div>
-                <div class="col enterprise-text"></div>
+                <div class="col enterprise-text">
+                    <h2>Entra in contatto con un partner <br> Dropbox</h2>
+                    <p class="mt-2 mb-2">Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
+                    <div><a href="" class="white-btn">Trova un partner</a></div>
+                </div>
             </div>
         </section>
         <!-- /Sezione Enterprise + image -->
