starting Designit section

--- a/index.html
+++ b/index.html
@@ -202,20 +202,57 @@
         <!-- /Sezione Enterprise + image -->
 
         <!-- Sezione a 6 riquadri -->
-        <section>
-            <div class="container content-square mt-2">
-                <h1></h1>
-                <div class="col side-square"></div>
-                <div class="col side-square"></div>
-                <div class="col side-square"></div>
+        <section class="content-square">
+            <div class="container mt-2 clearfix">
+                <h1 class="mt-2 mb-2">Esegui più operazioni con Dropbox Business</h1>
+                <div class="col side-square">
+                    <img src="img/business-feature-switching-tools.png" alt="business-tools">
+                    <h2>Passa di meno da uno strumento all'altro</h2>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e <span class="underline">Dropbox Paper</span> direttamente da Dropbox</p>
+                </div>
+                <div class="col side-square">
+                    <img src="img/business-feature-coordinate-it.png" alt="business-tools">
+                    <h2>Passa di meno da uno strumento all'altro</h2>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
+                </div>
+                <div class="col side-square">
+                    <img src="img/business-feature-multi-device.png" alt="business-tools">
+                    <h2>Passa di meno da uno strumento all'altro</h2>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
+                </div>
             </div>
-            <div class="container side-squareer">
-                <div class="col side-square"></div>
-                <div class="col side-square"></div>
-                <div class="col side-square"></div>
+            <div class="container clearfix">
+                <div class="col side-square">
+                    <img src="img/business-feature-integrations-it.png" alt="business-tools">
+                    <h2>Passa di meno da uno strumento all'altro</h2>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
+                </div>
+                <div class="col side-square">
+                    <img src="img/business-feature-send-files-it.png" alt="business-tools">
+                    <h2>Passa di meno da uno strumento all'altro</h2>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
+                </div>
+                <div class="col side-square">
+                    <img src="img/business-feature-security.png" alt="business-tools">
+                    <h2>Passa di meno da uno strumento all'altro</h2>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
+                </div>
             </div>
         </section>
         <!-- /Sezione a 6 riquadri -->
+
+        <!-- Sezione 500.000 -->
+        <div class="five-thousand-section">
+            <div class="container">
+                <h1>
+                    Più di 500.000 team<br> utilizzano Dropbox Business
+                </h1>
+                <div class="mt-2">
+                    <a href="" class="underline">Scopri di più sui nostri clienti</a>
+                </div>
+            </div>
+        </div>
+        <!-- /Sezione 500.000 -->
 
         <!-- Sezione Designit -->
         <section>
