--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -53,7 +53,9 @@
                     <div class="jumbo-btn"><a href="" class="blue-btn">Inizia la tua prova gratuita</a></div>
                     <div><a href="" id="jumbo2">Annulla in qualsiasi momento</a></div>
                     <div id="arrow">
-                        <i class="fas fa-arrow-down"></i>
+                        <a href="#plan">
+                            <i class="fas fa-arrow-down"></i>
+                        </a>
                     </div>
                 </div>
                 <div class="col image-col">
@@ -64,7 +66,7 @@
         <!-- /Jumbotron banner -->
 
         <!-- Sezione piano Dropbox -->
-        <section class="dropbox-plan mt-2">
+        <section class="dropbox-plan mt-2" id="plan">
             <div class="container plan-top">
                 <h2 class="plan-title">Trova il piano Dropbox Business che fa per te</h2>
                 <div class="radio1 mt-2">
@@ -247,18 +249,47 @@
                 <h1>
                     Più di 500.000 team<br> utilizzano Dropbox Business
                 </h1>
-                <div class="mt-2">
+                <div class="mt-2 mb-2">
                     <a href="" class="underline">Scopri di più sui nostri clienti</a>
                 </div>
             </div>
         </div>
         <!-- /Sezione 500.000 -->
-
+        
         <!-- Sezione Designit -->
         <section>
-            <div class="container">
-                <!-- qua ce metto l'h1 e sotto l'a href -->
+            <div class="jumbotron">
+                <div class="col side-square-partner">
+                    <div class=" col partner-square bg-green">
+                        <img src="img/designit.svg" alt="">
+                    </div>
+                    <div class="col partner-square bg-brown">
+                        <img src="img/arizona_state_university.svg" alt="">
+                    </div>
+                    <div class=" col partner-square bg-azure">
+                        <img src="img/topps.svg" alt="">
+                    </div>
+                    <div class="col partner-square bg-tomato">
+                        <img src="img/topps.svg" alt="">
+                    </div>
+                </div>
+                <div class="col designit-col"></div>
+                <div class="col side-square-partner">
+                    <div class=" col partner-square bg-bordeaux">
+                        <img src="img/world_bicycle_relief.svg" alt="">
+                    </div>
+                    <div class="col partner-square bg-celest">
+                        <img src="img/hearst_corp.svg" alt="">
+                    </div>
+                    <div class=" col partner-square bg-blue">
+                        <img src="img/lonely_planet.svg" alt="">
+                    </div>
+                    <div class="col partner-square bg-yellow">
+                        <img src="img/clear_channel.svg" alt="">
+                    </div>
+                </div>
             </div>
+            
         </section>
         <!-- /Sezione Designit -->
 
