aggiunta section FAQ e footer

--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
                         <span class="acquista-ora">oppure</span><span class="acquista-ora2"><a href=""> acquista ora</a></span>
                         <h3 class="col-list">Punti salienti del piano</h3>
                         <ul>
-                            <li>&check; Invia file fino a 100 GB con Dropbox <span id="a-capo">Transfert</span></li>
-                            <li>&check; Cartelle offline su dispositivi mobili</li>
-                            <li>&check; Pulizia remota dell'account</li>
-                            <li>&check; Filigrana documento</li>
-                            <li>&check; Assistenza prioritaria via mail e chat</li>
+                            <li><span id="blue-check">&check;</span> Invia file fino a 100 GB con Dropbox <span id="a-capo">Transfert</span></li>
+                            <li><span id="blue-check">&check;</span> Cartelle offline su dispositivi mobili</li>
+                            <li><span id="blue-check">&check;</span> Pulizia remota dell'account</li>
+                            <li><span id="blue-check">&check;</span> Filigrana documento</li>
+                            <li><span id="blue-check">&check;</span> Assistenza prioritaria via mail e chat</li>
                         </ul>
                     </div>
                 </div>
@@ -131,11 +131,11 @@
                         <span class="acquista-ora">oppure</span><span class="acquista-ora2"><a href=""> acquista ora</a></span>
                         <h3 class="col-list">Punti salienti del piano</h3>
                         <ul>
-                            <li>&check; Invia file fino a 100 GB con Dropbox <span id="a-capo">Transfert</span></li>
-                            <li>&check; Cartelle offline su dispositivi mobili</li>
-                            <li>&check; Pulizia remota dell'account</li>
-                            <li>&check; Filigrana documento</li>
-                            <li>&check; Assistenza prioritaria via mail e chat</li>
+                            <li><span id="blue-check">&check;</span> Invia file fino a 100 GB con Dropbox <span id="a-capo">Transfert</span></li>
+                            <li><span id="blue-check">&check;</span> Cartelle offline su dispositivi mobili</li>
+                            <li><span id="blue-check">&check;</span> Pulizia remota dell'account</li>
+                            <li><span id="blue-check">&check;</span> Filigrana documento</li>
+                            <li><span id="blue-check">&check;</span> Assistenza prioritaria via mail e chat</li>
                         </ul>
                     </div>
                 </div>
@@ -161,11 +161,11 @@
                         <span class="acquista-ora">oppure</span><span class="acquista-ora2"><a href=""> acquista ora</a></span>
                         <h3 class="col-list">Punti salienti del piano</h3>
                         <ul>
-                            <li>&check; Invia file fino a 100 GB con Dropbox <span id="a-capo">Transfert</span></li>
-                            <li>&check; Cartelle offline su dispositivi mobili</li>
-                            <li>&check; Pulizia remota dell'account</li>
-                            <li>&check; Filigrana documento</li>
-                            <li>&check; Assistenza prioritaria via mail e chat</li>
+                            <li><span id="blue-check">&check;</span> Invia file fino a 100 GB con Dropbox <span id="a-capo">Transfert</span></li>
+                            <li><span id="blue-check">&check;</span> Cartelle offline su dispositivi mobili</li>
+                            <li><span id="blue-check">&check;</span> Pulizia remota dell'account</li>
+                            <li><span id="blue-check">&check;</span> Filigrana documento</li>
+                            <li><span id="blue-check">&check;</span> Assistenza prioritaria via mail e chat</li>
                         </ul>
                     </div>
                 </div>
@@ -182,7 +182,7 @@
                 </div>
                 <h2>Enterprise</h2>
                 <div>
-                    <span class="blue-btn">Contatta l'ufficio vendite</span>
+                    <a href=""><span class="blue-btn">Contatta l'ufficio vendite</span></a>
                 </div>
                 <div class="enterprise-p line-height2">
                     <p>Contatta l'ufficio vendite per i prezzi</p>
@@ -277,6 +277,7 @@
                 <div class="col designit-col">
                     <div class="designit-logo">
                         <img src="img/designit2.svg" alt="">
+                        <div id="border-grey" class="mt-2"></div>
                     </div>
                     <div class="designit-text">
                         <p>"I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper.</p>
@@ -311,10 +312,197 @@
         </section>
         <!-- Sezione try-now-for-30-days -->
 
-
+        <!-- Sezione support -->
+        <section class="support">
+            <div class="container">
+                <h2 class="mt-2 mb-2">Domande frequenti</h2>
+                <div class="row-support border-top clearfix">
+                    <div class="col support-text">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</div>
+                    <i class="fas fa-angle-down support-arrow"></i>
+                </div>
+                <div class="row-support clearfix">
+                    <div class="col support-text">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</div>
+                    <i class="fas fa-angle-down support-arrow"></i>
+                </div>
+                <div class="row-support clearfix">
+                    <div class="col support-text">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</div>
+                    <i class="fas fa-angle-down support-arrow"></i>
+                </div>
+                <div class="row-support clearfix">
+                    <div class="col support-text">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</div>
+                    <i class="fas fa-angle-down support-arrow"></i>
+                </div>
+            </div>
+        </section>
+        <!-- /Sezione support -->
 
     </main>
     <!-- /Main -->
+
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+                <div class="row-footer clearfix">
+                    <div class="col col-footer">
+                        <h2 class="mb-2">Dropbox</h2>
+                        <ul>
+                            <li>
+                                <a href="">
+                                    Applicazione Desktop
+                                </a>    
+                            </li>
+                            <li>
+                                <a href="">
+                                    Perché Discord
+                                </a>    
+                            </li>
+                            <li>
+                                <a href="">
+                                    Piani
+                                </a>    
+                            </li>
+                            <li>
+                                <a href="">
+                                    Sicurezza
+                                </a>    
+                            </li>
+                            <li>
+                                <a href="">
+                                    Funzioni
+                                </a>    
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col col-footer">
+                        <h2 class="mb-2">Prodotti</h2>
+                        <ul>
+                            <li>
+                                <a href="">
+                                    Applicazione Desktop
+                                </a>    
+                            </li>
+                            <li>
+                                <a href="">
+                                    Perché Discord
+                                </a>    
+                            </li>
+                            <li>
+                                <a href="">
+                                    Piani
+                                </a>    
+                            </li>
+                            <li>
+                                <a href="">
+                                    Sicurezza
+                                </a>    
+                            </li>
+                            <li>
+                                <a href="">
+                                    Funzioni
+                                </a>    
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col col-footer">
+                        <h2 class="mb-2">Azienda</h2>
+                        <ul>
+                            <li>
+                                <a href="">
+                                    Applicazione Desktop
+                                </a>    
+                            </li>
+                            <li>
+                                <a href="">
+                                    Perché Discord
+                                </a>    
+                            </li>
+                            <li>
+                                <a href="">
+                                    Piani
+                                </a>    
+                            </li>
+                            <li>
+                                <a href="">
+                                    Sicurezza
+                                </a>    
+                            </li>
+                            <li>
+                                <a href="">
+                                    Funzioni
+                                </a>    
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col col-footer">
+                        <h2 class="mb-2">Supporto</h2>
+                        <ul>
+                            <li>
+                                <a href="">
+                                    Applicazione Desktop
+                                </a>    
+                            </li>
+                            <li>
+                                <a href="">
+                                    Perché Discord
+                                </a>    
+                            </li>
+                            <li>
+                                <a href="">
+                                    Piani
+                                </a>    
+                            </li>
+                            <li>
+                                <a href="">
+                                    Sicurezza
+                                </a>    
+                            </li>
+                            <li>
+                                <a href="">
+                                    Funzioni
+                                </a>    
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col col-footer">
+                        <h2 class="mb-2">Community</h2>
+                        <ul>
+                            <li>
+                                <a href="">
+                                    Applicazione Desktop
+                                </a>    
+                            </li>
+                            <li>
+                                <a href="">
+                                    Perché Discord
+                                </a>    
+                            </li>
+                            <li>
+                                <a href="">
+                                    Piani
+                                </a>    
+                            </li>
+                            <li>
+                                <a href="">
+                                    Sicurezza
+                                </a>    
+                            </li>
+                            <li>
+                                <a href="">
+                                    Funzioni
+                                </a>    
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div id="border-grey"></div>
+                <span class="language">
+                    <i class="fas fa-globe-americas">
+                        Italiano <i class="fas fa-caret-up arrow-up"></i>
+                    </i>
+                </span>
+        </div>
+    </footer>
+    <!-- Footer -->
     
 </body>
 </html>
